navbar font colour change and fixed code spacing in install

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -186,7 +186,7 @@ padding: 6px;
 
 #navbar a {
     text-decoration: none;
-    color: #00F;
+    color: #7030A0;
     padding: 8px 8px 8px 8px;
 }
 
